# vectorseam

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  python-benchmarks.yml
benchmarks/: README.md  bench_frame.py  bench_message.py  bench_vector_capture.py
crates/seam/: Cargo.toml
crates/seam/benches/: phase_b.rs
crates/seam/examples/: f_pg_fixture.rs
crates/seam/src/: accounting.rs  aggregate.rs  config.rs  daemon.rs  database.rs  intermediate.rs  lib.rs  main.rs  math.rs  measure.rs  model.rs  pacer.rs  pipeline.rs  population.rs  tuner.rs
crates/seam/tests/: acceptance_a_anchor.rs  acceptance_b_estimator.rs  acceptance_c_durability.rs  acceptance_d_resources.rs  estimator_properties.rs  f_agg_builders.rs
crates/seam/tests/support/: anchor.rs  f_agg.rs  mod.rs
crates/vectorseam-collector/: Cargo.toml
crates/vectorseam-collector/src/: config.rs  counters.rs  lib.rs  listener.rs  main.rs  memory.rs  reader.rs  time.rs  writer.rs
crates/vectorseam-collector/tests/: collector.rs
crates/vectorseam-core/: Cargo.toml
crates/vectorseam-core/src/: binary.rs  cohort.rs  frame.rs  lib.rs  segment.rs  window.rs
demo/: Dockerfile.rust  README.md  __init__.py  docker-compose.yml
demo/api/: Dockerfile  __init__.py  app.py
demo/config/: seam.yaml
demo/docs/: m1-spec.md
demo/driver/: __init__.py  __main__.py
demo/scripts/: __init__.py  load_data.py
demo/tests/: __init__.py  test_api.py  test_driver.py  test_load_data.py
docs/: REVIEW_MAP.md  acceptance-map.md  adaptive-sampling.md  collection-and-tuning.md  phase-b-benchmark-baseline.md  stage-1-summary.md  stage-2-summary.md  stage-3-summary.md  stage-4-summary.md  tuner-spec.md
python/ann-recall-latency/: NOTICE  README.md  __init__.py  analyze.py  common.py  config.yaml  docker-compose.yml  download.py  emb-test.py  embed.py  ground_truth.py  load.py  pg_load.py  sweep.py
python/ann-recall-latency/results/: calibration_transfer.csv  summary_by_dataset_ef.csv
python/seam_harness/: __init__.py  anchor.py
python/vectorseam/: __init__.py  frame.py  message.py  vector_capture.py  vector_sender.py
python/vectorseam/examples/: __init__.py  pgvector_capture.py
python/vectorseam/tests/: test_frame.py  test_message.py  test_seam_anchor_harness.py  test_vector_capture.py  test_vector_sender.py
tests/seam/: docker-compose.yml
