[workspace]
members = ["crates/vectorseam-core"]
resolver = "3"

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/MaciekLesiczka/vectorseam"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
clap = { version = "4.6.1", features = ["derive", "env"] }
object_store = "0.14.0"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ulid = "1.2.1"

[workspace.lints.rust]
unsafe_code = "forbid"
