[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vectorseam"
version = "0.1.0"
description = "Vector search benchmarks and retrieval experiments."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115",
    "matplotlib==3.10.9",
    "numpy>=1.24",
    "psycopg[binary]>=3.2",
    "pyarrow>=16.0",
    "pyyaml>=6.0",
    "torch>=2.13.0",
    "sentence-transformers",
    "tqdm>=4.68",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
bench = [
    "pyperf>=2.10",
]

[project.urls]
Repository = "https://github.com/MaciekLesiczka/vectorseam"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
