[package]
name = "seam"
version = "0.1.0"
edition = "2024"
description = "VectorSeam tuner."
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
humantime = "2.4.0"
object_store.workspace = true
parquet = { version = "58.3.0", default-features = false, features = ["arrow", "zstd"] }
pgvector = { version = "0.4.2", features = ["postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
# 0.0.12+ uses language and standard-library features newer than the workspace MSRV.
serde-saphyr = "=0.0.11"
serde_json = "1.0.150"
statrs = "0.18.0"
thiserror.workspace = true
tokio.workspace = true
tokio-postgres = "0.7.15"
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true
vectorseam-core = { path = "../vectorseam-core" }

[dev-dependencies]
anyhow.workspace = true
criterion = "0.5.1"
proptest = "1.11.0"
rand = "0.9.4"
rand_chacha = "0.9.0"
rayon = "1.11.0"
tempfile.workspace = true

[lib]
path = "src/lib.rs"

[[example]]
name = "f_pg_fixture"
path = "examples/f_pg_fixture.rs"

[[bin]]
name = "seam"
path = "src/main.rs"

[[bench]]
name = "phase_b"
harness = false

[lints]
workspace = true
