[package]
name = "vectorseam-collector"
version = "0.1.0"
edition = "2024"
description = "VectorSeam sidecar collector daemon."
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
object_store.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true
vectorseam-core = { path = "../vectorseam-core" }

[dev-dependencies]
tempfile.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "vectorseam-collector"
path = "src/main.rs"

[lints]
workspace = true
